# aim-classification-llm

./: .dockerignore  .env.example  .flake8  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
_notebooks/: 00_EDA.py  01a_LLM_classifier.py  01b_LLM_separate.py  01c_LLM_separate_prompt_adjust.py  01d_Embedding_classifier.py  01e_Embedding_classifier_separate.py
src/aim/: config.py  main.py  models.py  predictor.py  routes.py  schemas.py
src/aim/model_definitions/: flag_classifier_optimized.json  flag_classifier_project_project_1.json  flag_classifier_project_project_2.json  flag_classifier_project_project_3.json  flag_classifier_project_project_4.json
tests/: test_config.py  test_main.py  test_models.py  test_predictor.py  test_routes.py  test_schemas.py
