[tool.poetry]
name = "aim-assignment"
version = "0.1.0"
description = "Assignment for Aim company"
authors = ["Consulting Kosinovi <consulting@kosinovi.eu>"]
readme = "README.md"
packages = [{include = "aim", from="src"}]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.122.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
dspy = "^3.0.4"
openai = "^2.8.1"
python-dotenv = "^1.0.0"
xgboost = "^3.1.2"
sentence-transformers = "^5.1.2"
transformers = "^4.57.3"
torch = "^2.9.1"
pydantic-settings = "^2.12.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort= "^6.0.1"
mypy= "^1.17.1"
ruff= "^0.12.11"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
parameterized = "^0.9.0"
types-pyyaml = "^6.0.12.20250822"
types-requests = "^2.32.4.20250809"
pre-commit-hooks = "^6.0.0"
httpx = "^0.28.1"
jupyter = "^1.1.1"
jupytext = "^1.18.1"
pandas = "^2.3.3"
matplotlib = "^3.10.7"
scikit-learn = "^1.7.2"
seaborn = "^0.13.2"
fastparquet = "^2024.11.0"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
branch = false
source = ["aim"]
omit = ["tests", "src/aim/models.py"]

[tool.coverage.paths]
source = ["./src/"]

[tool.coverage.report]
fail_under = 95
skip_covered = true
show_missing = true
exclude_lines = ["@abc.abstractmethod", "raise NotImplemented", "pragma: no cover"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "A005", # Module shadowing - problems with logging
    "E501", # line-legth check
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in `__init__`
    "D107", # Missing docstring in `__init__`
    "D203", # black managed: one-blank-line-before-class
    "D211", # black managed: no-blank-line-before-class
    "D212", # black managed: multi-line-summary-first-line
    "D213", # black managed: multi-line-summary-second-line
    "D407", # [*] Missing dashed underline after section
    "D412", # No blank lines allowed between a section header and its content
    "I001", # isort managed: Import block is un-sorted or un-formatted
    "COM812", # black managed: Trailing comma missing
    "EM102", # Exception must not use an f-string literal, assign to variable first
    "G004", # not a crime especially in loguru: Logging statement uses f-string
    "S101", # Use of `assert` detected
    "G010", # pcty_log use warn as access to Logging.warning: Logging statement uses `warn` instead of `warning`
    "ERA001", # do not remove anything detected to be commented out code, this was removing intended comments
    "TRY003", #Avoid specifying long messages outside the exception class
    "EM101", # Exception must not use a string literal, assign to variable first
    "PGH003", # Use specific rule codes when ignoring type issues
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
    "UP035", # typing.Dict` is deprecated, use `dict` instead
    "UP006", # Use `dict` instead of `Dict` for type annotations
    "D401", # First line of docstring should be in imperative mood
]
select = [
    "ALL",
]
exclude = [
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ANN001", # for fixtures that's expected: Missing type annotation for function argument
    "ANN202", # Missing return type annotation for private function `call`
    "ANN201", # test fnuctions no need to annotate: Missing return type annotation for public function
    "PT019", # This is a mistake in ruff in case of pytest:parametrize:Fixture `_ext` without value is injected as parameter, use `@pytest.mark.usefixtures` instead
    "PD901", # `df` is a bad variable name. Be kinder to your future self.
    "ARG001", # Unused function argument
    "ARG002", #  Unused method argument:
    "ARG003", #  Unused method argument:
    "PT015", # Assertion always fails, replace with `pytest.fail()`
    "PT023", # Use `@pytest.mark.integration()` over `@pytest.mark.integration`
    "PLR2004", # magic numbers
    "D105", # Missing docstring in magic method
    "D103", # Missing docstring in public function"
    "D102", # Missing docstring in public method"
    "D101", # Missing docstring in public class"
    "PT009", # Use a regular `assert` instead of unittest-style `assertListEqual
    "PT027", # Use `pytest.raises` instead of unittest-style `assertRaises`
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "FBT002", # Boolean default positional argument in function definition
    "PLR0913", #  Too many arguments in function definition (6 > 5)
    "SLF001", #  Private member accessed
]


[tool.isort]
atomic = true
line_length = 100
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
balanced_wrapping = true
include_trailing_comma = true
multi_line_output = 3
known_third_party = [
    "pytest",
]
known_first_party = [
]

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "*.tests",
]
ignore_errors = true


[tool.jupytext]
formats = "ipynb,py:percent"

[tool.pytest.ini_options]
env_files = [".env.test"]